--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+.list-item {
+  list-style-type: none;
+  margin-left: -40px;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 100px;
+  margin-left: 500px;
+  min-height: 100vh;
+  box-sizing: border-box;
+  max-width: 350px;
+  height: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+.ToDoApp {
+  max-width: 400px;
+  width: 100%;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+.ToDoApp button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-add button{
+  width: 50px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(28, 235, 235);
+  color: #f4f4f4;
+}
+
+#deleteAll {
+  background-color: #ff0000;
+  color: #f4f4f4;
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  height: 30px;
+}
+#delete {
+  border: none;
+  background: none;
+}
+.task button {
+  background: none;
+  border: none;
+  margin-right: 40px;
+  font-size: 15px;
+}
+#input {
+  margin-top: 20px;
+  width: 250px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid wheat;
 }
